mainPage heading Spacing Fixed

--- a/src/TT/app.css
+++ b/src/TT/app.css
@@ -28,13 +28,7 @@ div div#mainsplash{
    text-align: center;
    color:blanchedalmond!important;
 } 
-.mainPage_vert_space{
-    margin-top: 5vh;
-}
-.mainPage_mainHeading{
-    height: 80vh;
-    padding-top: 200px;
-}
+
 
 .OverView_heading{
     text-align: center;
